[metadata]
name = gym_rags
version = 0
description = A simpleOpenAI environment for training RL agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/satyapravin/RAGS
author = Praveen Bezwada
author_email = pravin.bezwada@gmail.com
maintainer = Pravin Bezwada
maintainer_email = pravin.bezwada@gmail.com
license = MIT
platforms = Linux
classifiers =
    Development Status :: 1 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
download_url = https://github.com/satyapravin/RAGS
keywords = utility,reinforcement-learning,RL,openai-gym,openai-environment,artificial-intelligence,graph

[options]
packages = find:
python_requires = >=3.6

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./gym_rags --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --cov-report term-missing --flake8 --ignore=docs/ --durations=3 --mypy
doctest_encoding = utf-8
mccabe-complexity = 10

[pydocstyle]
match_dir = gym_rags
ignore = D104, D105, D107, D301, D413, D203, D212, D100

[flake8]
max_line_length = 88
exclude = tests/
ignore = H301, H306, H404, H405, W503, D105, D413, D103, D107, E252, N803, E203

[mutmut]
backup = False
runner = python -m pytest
tests_dir = tests/

[mypy]
ignore_missing_imports = True
